📦️refactor : 세션 조회 API 페이징으로 리팩토링